# FerrOS

./: .gitignore  Cargo.toml  Makefile  README.md  createDisk.py  disk.disk  disk.img  diskStructures.py  diskUtilities.py  dump  linker.ld  x86_64-ferros.json
.cargo/: config.toml
.github/workflows/: rust.yml
artifacts/: main.tex
disk/: createDisk.py  disk.img  diskStructures.py  diskUtilities.py
docs/: Makefile  README.md  schema.odg  template.latex
docs/images/: img.xcf
docs/report/: report.md
docs/slides/: VFS.odg  slides.md
filesystem/: clock  ferr_shell  issou.txt  test_io
filesystem/games/: snake
presentation/: slides.md
report/: report.md
src/: allocator.rs  interrupts.rs  issou  keyboard.rs  keyboard_layout.rs  lib.rs  main.rs  serial.rs  test_io  test_program  test_program2  vga.rs
src/allocator/: linked_list.rs  mod.rs
src/data_storage/: mod.rs  path.rs  queue.rs  random.rs  registers.rs  screen.rs
src/filesystem/: disk_operations.rs  fifo.rs  filetree.rs  fsflags.rs  host_shell.rs  mod.rs  partition.rs  screen_partition.rs  test.rs  ustar.rs  vfs.rs
src/filesystem/descriptor/: mod.rs  modOld.rs
src/filesystem/drivers/: clock_driver.rs  disk_operations.rs  fifo.rs  host_shell.rs  kernel.rs  keyboard.rs  mod.rs  mouse_driver.rs  nopart.rs  proc.rs  ramdisk.rs  raw.rs  screen_partition.rs  sound.rs  ustar.rs  ustar_upper.rs
src/filesystem/drivers/hardware/: clock.rs  keyboard.rs  mod.rs  sound.rs
src/filesystem/drivers/software/: mod.rs
src/gdt/: gdt_entry.rs  mod.rs
src/hardware/: clock.rs  mod.rs  mouse.rs  power.rs  timer.rs
src/interrupts/: idt.rs  mod.rs  mod2.rs  modNew.rs  modOld.rs
src/interrupts/syscalls/: mod.rs
src/keyboard/: keyboard_interaction.rs  keyboard_interraction.rs  keyboard_layout.rs  mod.rs
src/memory/: .TOOD.kate-swp  TOOD  mod.rs  modOld.rs
src/programs/: asciiFluid.rs  ascii_fluid.rs  mod.rs  shell.rs
src/scheduler/: laucher.asm  leave_context.asm  mod.rs  process.asm  process.rs
src/scheduler/process/: elf.rs  mod.rs
src/sound/: mod.rs  soundQueue.rs  sound_queue.rs
src/syscalls/: mod.rs
src/task/: executor.rs  mod.rs
src/user_program/: ferr_shell  launcher  test_io  test_io2  test_listen  test_open_text
src/vga/: mainscreen.rs  mod.rs  video_mode.rs  virtual_screen.rs
src/vga_controller/: mod.rs
tests/: boot.rs
