[package]
name = "os-test"
version = "0.1.0"
authors = ["Constantin Gierczak--Galle <constantin.gierczak-galle@ens.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
spin = "0.5.2"
x86_64 = "*"
pic8259_simple = "*"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


#[dependencies.crossbeam-queue]
#version = "0.2.1"
#default-features = false
#features = ["alloc"]