[package]
name = "ferr_os"
version = "0.1.0"
authors = [
    "Constantin GIERCZAK--GALLE <constantin.gierczak-galle@ens.fr>",
    "Samuel VIVIEN",
    "Paul FOURNIER <paul.fournier@ens.psl.eu>",
    "Gabriel DORIATH DÖHLER <gabriel.doriath.dohler@ens.psl.eu>",
]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
spin = "0.5.2"
x86_64 = "0.13.2"
pic8259_simple = "*"
pc-keyboard = "*"
linked_list_allocator = "*"
uart_16550 = "*"
vga= "*"
bitflags = "*"
bit_field = "*"
# ferr_os-librust = { git = "https://github.com/Sup3Legacy/FerrOS-librust" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]


[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "*"
default-features = false
features = ["alloc"]


# Exit QEMU from the guest system.
[package.metadata.bootimage]
test-timeout = 60  # Number of seconds before timeout.
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",  # Enable serial port.
    "-serial", "stdio",  # Redirect the output of the serial port to stdout.
    "-display", "none"  # Hide the display in test mode.
]
test-success-exit-code = 33
